--- a/Image_classification_cnn_cifar10.ipynb
+++ b/Image_classification_cnn_cifar10.ipynb
@@ -40,17 +40,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "45EDW275SgEl",
-        "outputId": "037e1532-ae9b-4a3f-db81-fd69e1ee619c"
+        "outputId": "3609e71b-6bc6-4122-d9e2-01b10dd4164d"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
-            "170498071/170498071 [==============================] - 4s 0us/step\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -75,7 +67,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J0P8nrWGSgEp",
-        "outputId": "3a6a5d0b-f40f-4337-93cc-14055b14ac7a"
+        "outputId": "3a59a93e-0924-498d-90c9-f608d11d6a29"
       },
       "outputs": [
         {
@@ -110,7 +102,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xnf6GAObSgEr",
-        "outputId": "c91e831d-7315-44ed-ec4e-89161698106c"
+        "outputId": "0146b737-a1e1-4ed7-ba33-a183a67436ff"
       },
       "outputs": [
         {
@@ -136,7 +128,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OPDN4lxySgEt",
-        "outputId": "be7e78d0-3e3f-4562-d4d5-532f37426215"
+        "outputId": "c2c3263e-da27-4b4e-f76a-e06f13eadf9a"
       },
       "outputs": [
         {
@@ -176,7 +168,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9XhizZjVSgEv",
-        "outputId": "0e008e31-5724-4816-a3c0-77ac14778704"
+        "outputId": "16dd31e6-f8f0-4e0a-bd7c-bfb205b3df52"
       },
       "outputs": [
         {
@@ -250,7 +242,7 @@
           "height": 237
         },
         "id": "sCXWv8ubSgEz",
-        "outputId": "26ae0f22-ec90-48e0-f24a-21276b773d5e"
+        "outputId": "56be0fa0-8bb1-4c92-df8f-26b747504fe9"
       },
       "outputs": [
         {
@@ -277,7 +269,7 @@
           "height": 237
         },
         "id": "EDqNHfZ7SgE0",
-        "outputId": "40b2851a-77ea-4adc-d973-65bf16aa5cfc"
+        "outputId": "6692c650-c0c6-42b8-94fc-1102b52ab69c"
       },
       "outputs": [
         {
@@ -343,7 +335,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FF9X0-EGSgE3",
-        "outputId": "4c0280ca-7d3c-435e-c951-c3247f47cf5e"
+        "outputId": "d60a69d4-dbe9-448e-909f-5f3c7a5db5b5"
       },
       "outputs": [
         {
@@ -351,22 +343,22 @@
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "1563/1563 [==============================] - 16s 9ms/step - loss: 1.8155 - accuracy: 0.3558\n",
+            "1563/1563 [==============================] - 10s 6ms/step - loss: 1.8144 - accuracy: 0.3539 - val_loss: 1.7025 - val_accuracy: 0.4041\n",
             "Epoch 2/5\n",
-            "1563/1563 [==============================] - 7s 4ms/step - loss: 1.6257 - accuracy: 0.4273\n",
+            "1563/1563 [==============================] - 8s 5ms/step - loss: 1.6250 - accuracy: 0.4258 - val_loss: 1.6164 - val_accuracy: 0.4179\n",
             "Epoch 3/5\n",
-            "1563/1563 [==============================] - 8s 5ms/step - loss: 1.5417 - accuracy: 0.4579\n",
+            "1563/1563 [==============================] - 8s 5ms/step - loss: 1.5443 - accuracy: 0.4548 - val_loss: 1.5187 - val_accuracy: 0.4557\n",
             "Epoch 4/5\n",
-            "1563/1563 [==============================] - 7s 4ms/step - loss: 1.4817 - accuracy: 0.4785\n",
+            "1563/1563 [==============================] - 8s 5ms/step - loss: 1.4835 - accuracy: 0.4744 - val_loss: 1.5830 - val_accuracy: 0.4200\n",
             "Epoch 5/5\n",
-            "1563/1563 [==============================] - 7s 5ms/step - loss: 1.4345 - accuracy: 0.4941\n"
+            "1563/1563 [==============================] - 8s 5ms/step - loss: 1.4360 - accuracy: 0.4950 - val_loss: 1.4802 - val_accuracy: 0.4645\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.History at 0x7c7a5ea72290>"
+              "<keras.src.callbacks.History at 0x7e1328ecdde0>"
             ]
           },
           "metadata": {},
@@ -385,7 +377,8 @@
         "              loss='sparse_categorical_crossentropy',\n",
         "              metrics=['accuracy'])\n",
         "\n",
-        "ann.fit(X_train, y_train, epochs=5)"
+        "# Train the model\n",
+        "ann.fit(X_train, y_train, epochs=5, validation_data=(X_test, y_test))\n"
       ]
     },
     {
@@ -405,7 +398,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vj1xXJ3VSgE4",
-        "outputId": "8318828b-f131-4ade-88f6-d352f4e861e7"
+        "outputId": "6f659717-eb9b-448f-8912-b2cdbb9e8b89"
       },
       "outputs": [
         {
@@ -416,16 +409,16 @@
             "Classification Report: \n",
             "               precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.46      0.64      0.54      1000\n",
-            "           1       0.64      0.56      0.60      1000\n",
-            "           2       0.34      0.41      0.37      1000\n",
-            "           3       0.30      0.53      0.39      1000\n",
-            "           4       0.35      0.47      0.40      1000\n",
-            "           5       0.44      0.19      0.27      1000\n",
-            "           6       0.59      0.40      0.47      1000\n",
-            "           7       0.76      0.30      0.43      1000\n",
-            "           8       0.66      0.53      0.58      1000\n",
-            "           9       0.54      0.62      0.58      1000\n",
+            "           0       0.72      0.33      0.45      1000\n",
+            "           1       0.57      0.66      0.61      1000\n",
+            "           2       0.29      0.55      0.38      1000\n",
+            "           3       0.31      0.42      0.36      1000\n",
+            "           4       0.49      0.20      0.29      1000\n",
+            "           5       0.36      0.39      0.38      1000\n",
+            "           6       0.63      0.32      0.42      1000\n",
+            "           7       0.54      0.59      0.56      1000\n",
+            "           8       0.62      0.61      0.61      1000\n",
+            "           9       0.53      0.58      0.55      1000\n",
             "\n",
             "    accuracy                           0.46     10000\n",
             "   macro avg       0.51      0.46      0.46     10000\n",
@@ -491,44 +484,34 @@
       "execution_count": 17,
       "metadata": {
         "scrolled": false,
+        "id": "TWaMgbU_SgE5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "TWaMgbU_SgE5",
-        "outputId": "3f99c95f-0f8f-42e1-c46a-cb405cb3342c"
+        "outputId": "5afa528b-1ffc-4f2f-c5c5-29f32e1836cc"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/10\n",
-            "1563/1563 [==============================] - 9s 4ms/step - loss: 1.4522 - accuracy: 0.4831\n",
-            "Epoch 2/10\n",
-            "1563/1563 [==============================] - 7s 4ms/step - loss: 1.0887 - accuracy: 0.6211\n",
-            "Epoch 3/10\n",
-            "1563/1563 [==============================] - 6s 4ms/step - loss: 0.9634 - accuracy: 0.6641\n",
-            "Epoch 4/10\n",
-            "1563/1563 [==============================] - 7s 5ms/step - loss: 0.8778 - accuracy: 0.6963\n",
-            "Epoch 5/10\n",
-            "1563/1563 [==============================] - 6s 4ms/step - loss: 0.8163 - accuracy: 0.7166\n",
-            "Epoch 6/10\n",
-            "1563/1563 [==============================] - 7s 4ms/step - loss: 0.7578 - accuracy: 0.7367\n",
-            "Epoch 7/10\n",
-            "1563/1563 [==============================] - 6s 4ms/step - loss: 0.7077 - accuracy: 0.7543\n",
-            "Epoch 8/10\n",
-            "1563/1563 [==============================] - 6s 4ms/step - loss: 0.6694 - accuracy: 0.7675\n",
-            "Epoch 9/10\n",
-            "1563/1563 [==============================] - 6s 4ms/step - loss: 0.6261 - accuracy: 0.7806\n",
-            "Epoch 10/10\n",
-            "1563/1563 [==============================] - 7s 4ms/step - loss: 0.5957 - accuracy: 0.7910\n"
+            "Epoch 1/5\n",
+            "1563/1563 [==============================] - 9s 5ms/step - loss: 1.4573 - accuracy: 0.4754\n",
+            "Epoch 2/5\n",
+            "1563/1563 [==============================] - 6s 4ms/step - loss: 1.1116 - accuracy: 0.6121\n",
+            "Epoch 3/5\n",
+            "1563/1563 [==============================] - 7s 4ms/step - loss: 0.9904 - accuracy: 0.6563\n",
+            "Epoch 4/5\n",
+            "1563/1563 [==============================] - 6s 4ms/step - loss: 0.9109 - accuracy: 0.6827\n",
+            "Epoch 5/5\n",
+            "1563/1563 [==============================] - 7s 4ms/step - loss: 0.8499 - accuracy: 0.7069\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.History at 0x7c79571dbbb0>"
+              "<keras.src.callbacks.History at 0x7e12446355d0>"
             ]
           },
           "metadata": {},
@@ -536,7 +519,7 @@
         }
       ],
       "source": [
-        "cnn.fit(X_train, y_train, epochs=10)"
+        "cnn.fit(X_train, y_train, epochs=5)"
       ]
     },
     {
@@ -553,25 +536,25 @@
       "execution_count": 18,
       "metadata": {
         "scrolled": true,
+        "id": "lgGMrdR1SgE6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "lgGMrdR1SgE6",
-        "outputId": "602489c8-9339-4efd-95af-07506bff9623"
+        "outputId": "89f54345-2700-4e17-f27d-26239b06b256"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "313/313 [==============================] - 1s 3ms/step - loss: 0.8951 - accuracy: 0.7008\n"
+            "313/313 [==============================] - 1s 3ms/step - loss: 0.9385 - accuracy: 0.6762\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.8951351642608643, 0.7008000016212463]"
+              "[0.9384727478027344, 0.6761999726295471]"
             ]
           },
           "metadata": {},
@@ -586,11 +569,11 @@
       "cell_type": "code",
       "execution_count": 19,
       "metadata": {
+        "id": "Y-2J5uZMSgE6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Y-2J5uZMSgE6",
-        "outputId": "5b22849c-0b1b-4073-8910-f46519ce38ff"
+        "outputId": "a043d630-87e0-453a-f3b6-41221ca3d05f"
       },
       "outputs": [
         {
@@ -604,21 +587,21 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[7.4295551e-03, 7.1079136e-05, 1.5104900e-02, 8.9521533e-01,\n",
-              "        2.2100737e-04, 5.6875296e-02, 7.3036295e-03, 1.1257249e-04,\n",
-              "        1.7443828e-02, 2.2275394e-04],\n",
-              "       [9.7401468e-03, 1.1374209e-02, 6.6043984e-05, 3.8309249e-06,\n",
-              "        6.1021224e-06, 6.7961942e-06, 6.5740346e-07, 4.2440701e-07,\n",
-              "        9.7863859e-01, 1.6319424e-04],\n",
-              "       [2.5574392e-01, 3.4068334e-01, 7.2172116e-03, 9.1041848e-03,\n",
-              "        1.3281572e-02, 1.2143700e-02, 3.8230012e-03, 2.9815301e-02,\n",
-              "        3.0260679e-01, 2.5581000e-02],\n",
-              "       [8.9117980e-01, 4.0590577e-04, 5.6067083e-02, 1.0924952e-03,\n",
-              "        5.1390366e-03, 7.2357943e-05, 3.0718371e-03, 8.4442821e-05,\n",
-              "        4.2885199e-02, 1.7677714e-06],\n",
-              "       [2.0569887e-08, 4.8732176e-07, 4.6200678e-03, 4.5437422e-03,\n",
-              "        6.8766035e-02, 6.5634558e-05, 9.2200309e-01, 5.9764653e-07,\n",
-              "        4.4895043e-07, 4.4618176e-08]], dtype=float32)"
+              "array([[5.4330625e-02, 2.7004236e-03, 2.0172697e-02, 6.7692846e-01,\n",
+              "        1.7996386e-04, 6.3156843e-02, 1.0561697e-01, 9.0835721e-04,\n",
+              "        6.5103881e-02, 1.0901799e-02],\n",
+              "       [5.2219331e-02, 1.5583749e-01, 3.8105249e-05, 2.0503610e-05,\n",
+              "        1.8639859e-05, 1.1365649e-06, 6.6482721e-07, 3.0909641e-07,\n",
+              "        7.1037394e-01, 8.1489906e-02],\n",
+              "       [5.6873515e-02, 2.9603082e-01, 1.6693685e-03, 3.9902311e-03,\n",
+              "        3.6981853e-03, 1.0996654e-03, 2.7606866e-04, 3.8365333e-04,\n",
+              "        5.1563168e-01, 1.2034684e-01],\n",
+              "       [8.7204850e-01, 1.2948544e-02, 2.3078125e-02, 5.0911342e-04,\n",
+              "        1.2609550e-02, 3.2770749e-05, 2.1216589e-04, 3.8734410e-04,\n",
+              "        7.6736771e-02, 1.4370129e-03],\n",
+              "       [3.8168434e-04, 1.6060594e-03, 3.6195353e-02, 5.5189896e-02,\n",
+              "        3.3794743e-01, 3.6544871e-02, 5.3047371e-01, 8.4057450e-04,\n",
+              "        6.6783506e-04, 1.5258777e-04]], dtype=float32)"
             ]
           },
           "metadata": {},
@@ -634,18 +617,18 @@
       "cell_type": "code",
       "execution_count": 20,
       "metadata": {
+        "id": "fIrQxc4lSgE7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "fIrQxc4lSgE7",
-        "outputId": "6df05253-08a0-4c34-b734-dfa64f58db9b"
+        "outputId": "187411e3-ed97-436a-c874-23b1600ab9e4"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[3, 8, 1, 0, 6]"
+              "[3, 8, 8, 0, 6]"
             ]
           },
           "metadata": {},
@@ -661,11 +644,11 @@
       "cell_type": "code",
       "execution_count": 21,
       "metadata": {
+        "id": "sQNE8dFQSgE8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "sQNE8dFQSgE8",
-        "outputId": "045fed07-1a2c-4496-ce95-f48778b267d6"
+        "outputId": "e8536215-eae3-4531-bebd-27b175936717"
       },
       "outputs": [
         {
@@ -687,12 +670,12 @@
       "cell_type": "code",
       "execution_count": 22,
       "metadata": {
+        "id": "Xv035GxKSgE8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 237
         },
-        "id": "Xv035GxKSgE8",
-        "outputId": "77238d42-bb96-4cd9-8a06-789388db2083"
+        "outputId": "60159cf1-01dd-428b-b4a1-0065dfd6faf6"
       },
       "outputs": [
         {
@@ -714,12 +697,12 @@
       "cell_type": "code",
       "execution_count": 23,
       "metadata": {
+        "id": "owztu2NeSgE9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
-        "id": "owztu2NeSgE9",
-        "outputId": "33aac4dd-0b5f-4f2e-d895-2385e05f3275"
+        "outputId": "4da18a7f-e0fe-4abc-f1bf-bdf4de82108c"
       },
       "outputs": [
         {
@@ -744,12 +727,12 @@
       "cell_type": "code",
       "execution_count": 24,
       "metadata": {
+        "id": "-KyHIppqSgE9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
-        "id": "-KyHIppqSgE9",
-        "outputId": "9dcb0adf-b8e3-4fbc-e2eb-8ee44083d9e3"
+        "outputId": "55cc09c6-5c13-4f55-966b-0b0cfcd2b6a1"
       },
       "outputs": [
         {
@@ -789,8 +772,10 @@
       "version": "3.8.5"
     },
     "colab": {
-      "provenance": []
-    }
+      "provenance": [],
+      "gpuType": "T4"
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
